crud de adm
