# src/shared/http/routes/index.ts
@@ -1,10 +1,12 @@
 import { Router } from 'express'
+import adminRoutes from './adminRoutes.js'
 import authRoutes from './authRoutes.js'
 import helloWorldRoutes from './hellowWorldRoues.js'
 
 const router = Router()
 
 router.use('/', authRoutes)
+router.use('/admins', adminRoutes)
 router.use('/hello-world', helloWorldRoutes)
 
 export default router
